# reactControl

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  README.md
app/conf/: iCub_parts_activation.ini  reactController.ini
app/scripts/: jointVelCtrlIdent_log.xml  reactCtrl_icub.xml  reactCtrl_icubSim.xml  reactCtrl_icubSim_new.xml  reactCtrl_log_icub.xml  reactCtrl_replay_icub.xml
deprecated/modules/reactController-sim/: CMakeLists.txt  main.cpp
deprecated/modules/reactController/include/: reactIpOpt.h
deprecated/modules/reactController/src/: NeoQP.cpp  reactIpOpt.cpp
deprecated/reactController-sim/: CMakeLists.txt  main.cpp
func/: func.m  func_dot.m  main.m
gazebo/worlds/: react_control.sdf
lib/: CMakeLists.txt
lib/include/iCub/motionPlan/: motionPlan.h
lib/src/: motionPlan.cpp
matlab/: collisionRiskFunction.m  collisionRiskMain.m
matlab/dumps/: plots.m
matlab/func/: func_dot.m
matlab/jointBoundsGuard/: func.m
matlab/jointVelCtrlIdent/: analyzeJointVelCtrlIdent.m
matlab/julia-reactController/: analysis.jl
matlab/reactController/: analyze.m  new_analysis.m  processData.m
matlab/simulation/: analyze.m  analyze_singleLog_biggerGrid.m  animate.m  animate_orig.m  fig-0.fig  fig-1.fig  run.m  visualizeShoulderIneqConstr.m
matlab/simulation-enhanced/: analyze.m  animate.m  fig-0.fig
matlab/simulation-enhanced/old_log_format/: animate.m
misc/: intro.pptx
modules/: CMakeLists.txt
modules/jointVelCtrlIdentSimple/: CMakeLists.txt  main.cpp
modules/reactController/: CMakeLists.txt  reactController.cpp  reactController.thrift  reactController_thrift.cmake  reactCtrlThread.cpp  reactCtrlThread.h  reactIpOpt.cpp  reactIpOpt.h
modules/reactController-sim/: CMakeLists.txt  main.cpp
modules/reactController-sim-enhanced/: CMakeLists.txt  main.cpp
modules/reactController/include/: NeoQP.h  avoidanceHandler.h  common.h  particleThread.h  reactController_IDL.h  reactCtrlThread.h  reactIpOpt.h  reactOSQP.h  visualisationHandler.h
modules/reactController/src/: NeoQP.cpp  avoidanceHandler.cpp  particleThread.cpp  reactController.cpp  reactController_IDL.cpp  reactCtrlThread.cpp  reactIpOpt.cpp  reactOSQP.cpp  visualisationHandler.cpp
scripts/: P2P.txt  icub_target_gen.py  lemniscate.txt  noyarp_target_gen.py  obstacle_gen.py  params-noobs.json  params-obs_botharms.json  sample.json  target_gen.py
tests/: CMakeLists.txt  test-reactController-position-direct.cpp
